--- a/client/src/Header/Filters/TagFilter/TagValueFilter/style.css
+++ b/client/src/Header/Filters/TagFilter/TagValueFilter/style.css
@@ -4,12 +4,3 @@
 
   text-overflow: ellipsis;
 }
-
-.tagvaluefilter-checkboxes {
-  display: inline;
-}
-
-.tagvaluefilter-count {
-  display: inline;
-  float: right;
-}
