--- a/client/src/Header/Filters/TagFilter/style.css
+++ b/client/src/Header/Filters/TagFilter/style.css
@@ -1,20 +1,28 @@
 .tagfilter-container {
   /* Dimensions */
-  min-width: 60rem;
+  width: 260px;
+  display: inline-block;
+  vertical-align: top;
+
+  /* Padding */
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 8px;
+
+  /* Margins */
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 0;
+  margin-bottom: 8px;
 
   /* Rounded edges */
-  border-radius: 20px;
-
-  /* Align children in the center */
-  align-content: center;
+  border-radius: 8px;
 
   /* Font styling */
   color: white;
   font-size: 25px;
   font-weight: 500;
-
-  /* Padding and margins */
-  padding: 0;
+  text-align: left;
 }
 
 .tagfilter-title {
@@ -26,15 +34,12 @@
   color: black;
   font-weight: 500;
   font-size: 18px;
-
-  /* Padding and margins */
-  margin-bottom: 0 !important;
 }
 
 .tagfilter-cardbody {
-  margin: 10px;
-}
+  border-radius: 8px;
 
-.tagfilter-header {
-  align-self: center;
+  /* Padding and margins */
+  margin: 0;
+  padding: 5px;
 }
