--- a/client/src/Header/Filters/style.css
+++ b/client/src/Header/Filters/style.css
@@ -4,4 +4,7 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 30px;
+
+  /* Text alignment */
+  text-align: center;
 }
